--- a/.github/workflows/metadata.yml
+++ b/.github/workflows/metadata.yml
@@ -16,6 +16,7 @@ jobs:
 
   post:
     if: always()
+    runs-on: ubuntu-latest
     steps:
       - name: Telemetry
         run: echo "telemetry here"
