--- a/.github/workflows/metadata.yml
+++ b/.github/workflows/metadata.yml
@@ -1,5 +1,5 @@
 name: pages build and deployment
-on: workflow_dispatch
+on: [ workflow_dispatch, push ]
 
 jobs:
   build:
@@ -17,7 +17,7 @@ jobs:
       - name: Telemetry
         if: always()
         run: |
-          curl --request POST \
+          curl --request GET \
           --url https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }}/jobs \
           --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
           --fail
